# ergogen-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  oldpoints
.github/workflows/: ci.yml  js-footprints-upstream.yml  knuckles-parity.yml  upstream-baselines.yml
app/: Cargo.toml
app/fixtures/: absolem-mini.yaml  absolem-mini___output.json  absolem-mini___points.json  absolem.yaml  absolem___output.json  absolem___points.json  empty___output.json  empty___points.json  sweep-like___output.json  sweep-like___points.json  zeph___output.json  zeph___points.json
app/fixtures/output/points/: demo.dxf  demo.yaml  points.yaml
app/fixtures/output/source/: canonical.yaml
app/src/: aggregator.rs  anchor.rs  cases.rs  config.rs  error.rs  expr.rs  filter.rs  io.rs  json.rs  lib.rs  operation.rs  outline.rs  outlines.rs  pcbs.rs  point.rs  points.rs  prepare.rs  preprocess.rs  server.rs  template.rs  types.rs  units.rs  utils.rs  yaml.rs  zone.rs
app/src/types/: aggregator.rs  anchor.rs  config.rs  mod.rs  point.rs  points.rs  preprocess.rs  yaml.rs  zone.rs
crates/ergogen-cli/: Cargo.toml
crates/ergogen-cli/src/: error.rs  main.rs  render.rs
crates/ergogen-cli/tests/: cli_logging.rs  cli_suite.rs  exit_codes.rs  render_smoke.rs  upstream_suite.rs
crates/ergogen-core/: Cargo.toml
crates/ergogen-dxf2png/: Cargo.toml
crates/ergogen-export/: Cargo.toml
crates/ergogen-export/examples/: reference_outputs.rs
crates/ergogen-export/src/: dxf.rs  dxf_geom.rs  jscad.rs  lib.rs  svg.rs
crates/ergogen-export/tests/: dxf_compare_files.rs  dxf_roundtrip_goldens.rs  jscad_v2.rs  m3_points_dxf.rs  m5_outlines_dxf.rs  m5_outlines_generated_vs_golden.rs  m5_outlines_golden_semantic.rs  reference_outputs.rs  svg.rs
crates/ergogen-geometry/: Cargo.toml
crates/ergogen-layout/: Cargo.toml
crates/ergogen-layout/examples/: points.rs
crates/ergogen-layout/src/: anchor.rs  lib.rs  points.rs
crates/ergogen-layout/tests/: anchor_unit.rs  upstream_points.rs
crates/ergogen-outline/: Cargo.toml
crates/ergogen-outline/examples/: outline_debug.rs
crates/ergogen-outline/src/: hulljs.rs  lib.rs  makerjs_path.rs
crates/ergogen-outline/tests/: upstream_outlines.rs
crates/ergogen-parser/: Cargo.toml
crates/ergogen-parser/examples/: prepare.rs
crates/ergogen-parser/src/: config.rs  error.rs  eval.rs  expr.rs  kle.rs  lib.rs  prepare.rs  units.rs  value.rs
crates/ergogen-parser/tests/: fixtures.rs  m2_canonical.rs  upstream_units.rs
crates/ergogen-pcb/: Cargo.toml
crates/ergogen-pcb/examples/: pcb_debug.rs
crates/ergogen-pcb/src/: footprint_spec.rs  js_footprints.rs  js_footprints_shared.rs  js_footprints_wasm.rs  js_runtime.rs  lib.rs  templates.rs  vfs.rs
crates/ergogen-pcb/templates/: kicad5_header.tpl  kicad8_header.tpl
crates/ergogen-pcb/templates/footprints/: injected.tpl
crates/ergogen-pcb/templates/footprints/button/: back.tpl  front.tpl
crates/ergogen-pcb/templates/footprints/choc/: base.tpl  hotswap.tpl  keycaps.tpl  keycaps_reverse_hotswap.tpl  reverse.tpl  reverse_hotswap.tpl
crates/ergogen-pcb/templates/footprints/chocmini/: base.tpl  keycaps.tpl  keycaps_reverse.tpl  reverse.tpl
crates/ergogen-pcb/templates/footprints/diode/: base.tpl
crates/ergogen-pcb/templates/footprints/mx/: base.tpl  hotswap.tpl  keycaps.tpl  keycaps_reverse_hotswap.tpl  reverse.tpl  reverse_hotswap.tpl
crates/ergogen-pcb/templates/footprints/pad/: base.tpl  right_text.tpl  up_back.tpl
crates/ergogen-pcb/templates/footprints/promicro/: down.tpl  up.tpl
crates/ergogen-pcb/templates/footprints/rest/: alps.tpl  jstph.tpl  jumper.tpl  oled.tpl  omron.tpl  rgb.tpl  rotary.tpl  scrollwheel.tpl  scrollwheel_reverse.tpl  slider.tpl  slider_back.tpl  via.tpl
crates/ergogen-pcb/templates/footprints/test/: anchor.tpl  anchor2.tpl  arrobj.tpl  dynamic_net.tpl  trace_b.tpl  trace_f.tpl  zone.tpl
crates/ergogen-pcb/templates/footprints/trrs/: base.tpl  reverse.tpl  reverse_symmetric.tpl
crates/ergogen-pcb/tests/: footprint_spec.rs  js_footprints.rs  js_footprints_upstream.rs  knuckles_parity.rs  m6_footprints.rs  m7_footprint_spec_pcb.rs  spec_parity.rs  virtual_fs.rs
crates/ergogen-wasm/: Cargo.toml  README.md
crates/ergogen-wasm/examples/: README.md  footprints.js  index.html  index.js
crates/ergogen-wasm/js/: footprints.js
crates/ergogen-wasm/src/: lib.rs
crates/ergogen-wasm/tests/: js_footprints.rs
ergogen-wasm/: Cargo.toml
ergogen-wasm/src/: lib.rs
fixtures/: README.md
fixtures/m1/: minimal.yaml
footprints/: button.yaml  button_back.yaml  choc_base.yaml  choc_hotswap.yaml  choc_keycaps.yaml  choc_keycaps_reverse_hotswap.yaml  choc_reverse.yaml  choc_reverse_hotswap.yaml  chocmini_base.yaml  chocmini_keycaps.yaml  chocmini_keycaps_reverse.yaml  chocmini_reverse.yaml  diode.yaml  mx_hotswap.yaml  mx_keycaps.yaml  mx_keycaps_reverse_hotswap.yaml  mx_reverse.yaml  mx_reverse_hotswap.yaml  pad.yaml  pad_right_text.yaml  pad_up_back.yaml  promicro_down.yaml  promicro_up.yaml  rest_alps.yaml  rest_jstph.yaml  rest_jumper.yaml  rest_oled.yaml  rest_omron.yaml  rest_rgb.yaml  rest_rotary.yaml  rest_scrollwheel.yaml  rest_scrollwheel_reverse.yaml  rest_slider.yaml  rest_slider_back.yaml  rest_via.yaml  trrs_base.yaml  trrs_reverse.yaml  trrs_reverse_symmetric.yaml
maker-rs/: Cargo.toml
maker-rs/src/: angle.rs  lib.rs  measure.rs  path.rs  paths.rs  point.rs  schema.rs
maker-rs/src/measure/: mod.rs  (+1 more)
plans/: detailed-rust-migration-execution-plan.md  js-footprints-dual-runtime-plan.md  m6-reference-output-checklist.md  migrate-ergogen-to-rust.md  wasm-crate-execution-plan.md
scripts/: README.md  update-upstream-baselines.sh
src/: main.rs
web/: Cargo.toml  index.html
web/assets/css/: styles.css
web/assets/js/: ergogen.js
web/src/: atoms.rs  ergogen.rs  main.rs  molecules.rs
web/src/atoms/: button.rs  download_row.rs  footer.rs  header.rs  jscad_preview.rs  split.rs  svg_preview.rs
web/src/context/: ergogen.rs  mod.rs
web/src/examples/: adux.yaml  reviung41.yaml  tiny20.yaml
web/src/molecules/: config_editor.rs  downloads.rs  file_preview.rs
(+117 files in other folders)
