[package]
name = "ergogen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "app", "web"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.29", features = ["derive"] }
ergogen-app = { path = "app" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
