[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.77"
monaco = { path = "../../rust-monaco", features = ["yew-components"] }
stylist = { version = "0.13.0", features = ["yew", "parser", "macros"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["DomRect", "Element", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
