[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-storage = "0.3.0"
js-sys = "0.3.77"
monaco = { path = "../../rust-monaco", features = ["yew-components"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
stylist = { version = "0.13.0", features = ["yew", "parser", "macros"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "Blob",
  "BlobPropertyBag",
  "DomRect",
  "Element",
  "HtmlSelectElement",
  "HtmlImageElement",
  "Url",
  "Window",
  "console",
] }
urlencoding = "2.1.3"
yew = { version = "0.21.0", features = ["csr"] }
