[package]
name = "ergogen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ergogen-core = { path = "../ergogen-core" }
ergogen-parser = { path = "../ergogen-parser" }
ergogen-layout = { path = "../ergogen-layout" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yml.workspace = true