[package]
name = "ergogen-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ergogen"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
ergogen-export = { path = "../ergogen-export" }
ergogen-layout = { path = "../ergogen-layout" }
ergogen-outline = { path = "../ergogen-outline" }
ergogen-parser = { path = "../ergogen-parser" }
ergogen-pcb = { path = "../ergogen-pcb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
