[package]
name = "ergogen-layout"
version.workspace = true
edition.workspace = true

[dependencies]
ergogen-core = { path = "../ergogen-core" }
ergogen-parser = { path = "../ergogen-parser" }
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
approx = "0.5"
serde_json = "1"
