[package]
name = "ergogen-outline"
version.workspace = true
edition.workspace = true

[dependencies]
ergogen-core = { path = "../ergogen-core" }
ergogen-geometry = { path = "../ergogen-geometry" }
ergogen-layout = { path = "../ergogen-layout" }
ergogen-parser = { path = "../ergogen-parser" }
cavalier_contours = "0.6"
indexmap = "2"
regex = "1"
thiserror = "2"

[dev-dependencies]
ergogen-export = { path = "../ergogen-export" }
proptest = "1.5.0"
