[package]
name = "ergogen-parser"
version.workspace = true
edition.workspace = true

[dependencies]
indexmap = { version = "2", features = ["serde"] }
meval = "0.2"
regex = "1"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
