[package]
name = "ergogen-pcb"
version.workspace = true
edition.workspace = true

[dependencies]
ergogen-core = { path = "../ergogen-core" }
ergogen-geometry = { path = "../ergogen-geometry" }
ergogen-layout = { path = "../ergogen-layout" }
ergogen-outline = { path = "../ergogen-outline" }
ergogen-parser = { path = "../ergogen-parser" }
cavalier_contours = "0.6"
indexmap = "2"
thiserror = "1"
