[package]
name = "ergogen-pcb"
version.workspace = true
edition.workspace = true

[dependencies]
ergogen-core = { path = "../ergogen-core" }
ergogen-geometry = { path = "../ergogen-geometry" }
ergogen-layout = { path = "../ergogen-layout" }
ergogen-outline = { path = "../ergogen-outline" }
ergogen-parser = { path = "../ergogen-parser" }
cavalier_contours = "0.6"
indexmap = "2"
regex = "1"
serde_json = { version = "1", optional = true }
thiserror = "1"
boa_engine = { version = "0.19", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
js-footprints = ["boa_engine", "serde_json"]
js-footprints-wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "serde_json"]

[dev-dependencies]
ergogen-export = { path = "../ergogen-export" }
